# online-travel-agency-rust

./: .gitignore  Cargo.toml  README.md  commands.txt  dockerfileadapter  dockerfileprocessor  dockerfilesupplier
adapter/: Cargo.toml  app_adpater.ini
adapter/src/: common.rs  main.rs
adapteryaml/: deployment.yaml  service.yaml
applib/: Cargo.toml
applib/benches/: bench_xml_merge.rs
applib/src/: lib.rs  lib_bak.rs  xmlutil.rs  xmlutil_bak.rs
processor/: Cargo.toml  app.ini
processor/src/: common.rs  definitions.rs  main.rs  processing.rs
processoryaml/: deployment.yaml  service.yaml
supplier/: Cargo.toml  app_sup.ini
supplier/src/: definitions.rs  filehandling.rs  main.rs
supplieryaml/: deployment.yaml
