[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
applib = { path="../applib"}
thiserror = "*"
ini = "1.3.0"
actix-web = "4.7.0"
rand ="0.8.5"
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.5"


mimalloc = { version = "*", features = ["secure"] }
[profile.release]
lto = "fat"

[[bin]]
name = "adapter"
