[package]
name = "applib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full", "rt", "rt-multi-thread"] }
quick-xml = "0.32.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
hyper = "1.4.1"
ring = "0.17.0"
hex = "0.4"
fastrand = "2.1.0"

[dev-dependencies]
criterion = "0.4"
mockito = "1.4.0"

[[bench]]
name = "bench_xml_merge"
harness = false
