[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
applib = { path="../applib"}
thiserror = "*"
tokio = { version = "1.39.2", features = ["full", "rt", "rt-multi-thread"] }
ini = "1.3.0"
lazy_static = "1.4.0"
ring = "0.17.0"
actix-web = "4.7.0"
async-std = "1.12.0"
awc ="3.5.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.5"
quick-xml = { version = "0.32.0", features = [ "serialize" ] }
serde_derive = "1.0"
anyhow = "1.0"
sha2 = "0.9.8"
digest = "0.9.0"
hex = "0.4"
fastrand = "2.1.0"


mimalloc = { version = "*", features = ["secure"] }


[profile.release]
lto = "fat"

[dependencies.uuid]
version = "1.9.1"
features = [ "v4", "fast-rng",   "macro-diagnostics"]



[[bin]]
name = "processor"



