[package]
name = "supplier"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "*"
actix-web = "4.7.0"
fastrand = "2.1.0"
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ini = "1.3.0"


mimalloc = { version = "*", features = ["secure"] }

[profile.release]
lto = "fat"

[[bin]]
name = "supplier"


